tests/errors/ifix_01.f90
program ifix_01
    print *, ifix(4.23_8)
end program
